--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-:root {
-    --blue: #1e90ff;
-    --white: #ffffff;
-
-}
-
 main {
     box-sizing: border-box;
     padding: 40px;
@@ -32,12 +26,17 @@ body {
 h2 {
     color: #dddddd;
 }
-img{
 
-    height:30px;
-    width:30px;
+.searchcitybutton{
+    margin-top: 6%;
+    width: 300px;
+    background-color: transparent;
+    border: 1px solid #dddddd;
+    color: #dddddd;
+    border-radius:10px;
+    padding: 10px 0px;
+
 }
-
 #weathercard {
     border: 0px solid #dddddd;
     justify-content: space-between;
@@ -112,8 +111,7 @@ img{
 
 .error-messge {
     padding: 10px;
-    color: #e6cccc;
-    /* border: 1px solid #720000; */
+    color: #ff6c6c;
     font-weight: bold;
 
 }
@@ -129,4 +127,10 @@ img{
 .dates,.temps,.climateimg,.winds,.humidits{
    justify-content:left;
 
+}
+
+img{
+
+    height:40px;
+    width:40px;
 }
